--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "mahbub",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -19,6 +20,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "oracledb": "^5.3.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
