updating db config & README file

--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
-PORT= 3000
-BaseURL = http://localhost
+PORT= 5000
+BASE_URL = http://localhost
 API_VERSION = /v1
-ProjectName = BoilerPlate
+PROJECT_NAME = BoilerPlate
 JWT_SECRET_KEY = jvhldskfhchgskldfcdhgdskjfcjkdhg
+
+DB_HOST = 15.15.0.59:15211521
+DB_DATABSE = students
+DB_USERNAME = abdikadir
+DB_PASSWORD = abdikadir
+
+
+
