improving db config

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_VERSION = /v1
 PROJECT_NAME = BoilerPlate
 JWT_SECRET_KEY = jvhldskfhchgskldfcdhgdskjfcjkdhg
 
-DB_HOST = 15.15.0.59:15211521
+DB_HOST = 15.15.0.59:1521
 DB_DATABSE = students
 DB_USERNAME = abdikadir
 DB_PASSWORD = abdikadir
