--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "i18n": "^0.13.3",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
+    "morganLogger": "^1.10.0",
     "node-cache": "^5.1.2",
     "oracledb": "^5.3.0",
     "winston": "^3.3.3"
